Updated paper to include appendices

--- a/06_Appendix_A/06000_Appendix_A.tex
+++ b/06_Appendix_A/06000_Appendix_A.tex
@@ -13,10 +13,5 @@
 % END HEADER
 
 \begin{document}
-	\section{Introduction}
-		\input{02_Introduction/02001_Competition_Purpose.tex}
-		
-		\input{02_Introduction/02002_Problem_Statement.tex}
-		
-		\input{02_Introduction/02003_Systems_Engineering_Purpose.tex}
+	\section{Appendix A}
 \end{document}
