--- a/05_Bibliography/05000_Bibliography.tex
+++ b/05_Bibliography/05000_Bibliography.tex
@@ -13,5 +13,9 @@
 % END HEADER
 
 \begin{document}
-	\section{Bibliography}
+\renewcommand\refname{Bibliography}
+	\begin{thebibliography}{9}
+	
+	\end{thebibliography}
 \end{document}
+
