--- a/07_Appendix_B/07000_Appendix_B.tex
+++ b/07_Appendix_B/07000_Appendix_B.tex
@@ -13,5 +13,15 @@
 % END HEADER
 
 \begin{document}
-	\section{Appendix B}
+	\section{Appendix B - Gantt Chart}
+	
+	\FloatBarrier
+		\begin{figure}[h]
+			\centering
+			\includegraphics[width=1\linewidth]{09_Figures/gantt_chart.png}
+			\caption{Robot System Hierarchy}
+			\label{fig:gantt_chart}
+		\end{figure}
+		\FloatBarrier	
+	
 \end{document}
