--- a/2017-2018 SE Paper.tex
+++ b/2017-2018 SE Paper.tex
@@ -43,15 +43,14 @@
 	
 	\input{04_Conclusions/04000_Conclusions.tex}
 	
-<<<<<<< HEAD
+	\pagebreak
+	
 	\input{05_Bibliography/05000_Bibliography.tex}
+	\addcontentsline{toc}{section}{Bibliography}
 	
 	\input{06_Appendix_A/06000_Appendix_A.tex}
 	
 	\input{07_Appendix_B/07000_Appendix_B.tex}
-=======
-	\input{07_Appendix_B/05000_Appendix_B.tex}
->>>>>>> 83b073f157d7094d800767c800aa7f8a4e2491a2
 	
 	\pagebreak
 
