--- a/03_Systems_Engineering/03002_Preliminary_Design.tex
+++ b/03_Systems_Engineering/03002_Preliminary_Design.tex
@@ -20,9 +20,11 @@
 	\label{subsec:preliminary_design}
 	Each system on the robot went through multiple design iterations during the preliminary design process. Significant background research was conducted into the Mars environment, potential excavation systems, drivetrain, and path planning and SLAM implementations. Trade studies were combined with testing to determine the best and most realistic rover design.
 	\subsubsection{Drive System}
-	Significant research was done on the drive systems of other RMC teams from previous years. Many robots encountered wheel slippage and struggled to maneuver out of steep ditches. The primary goal of robot drive system was to provide traction in BP-1 and avoid obstacles and ditches in the terrain. 
-	
-Two potential drive mechanisms were considered: a 4-wheel direct drive and tank tread drive. A trade study for the drive systems considered is shown in Table \ref{table:drive_trade_study}. Both systems present unique fabrication challenges. The tank tread drive has more moving parts than the wheels, but the wheels would require significantly more custom manufacturing since few off-the-shelf wheels are available that meet the system requirements. As a result of the increased number of moving parts, the tank tread drive is also less power-efficient than the four wheel direct drive.  Both systems present unique fabrication challenges. The tank tread drive has more moving parts than the wheels, but the wheels would require significantly more custom manufacturing since few off-the-shelf wheels are available that meet the system requirements. As a result of the increased number of moving parts, the tank tread drive is also less power-efficient than the four wheel direct drive.  The ability to independently drive each wheel improves maneuverability and stability when climbing obstacles. However, this comes at the cost of increased control system complexity over the tank tread drive.   The 4-wheel direct drive also provides redundancy as the system is fail-operational in the case a of single drive motor failure. Due to the simple design implementation and the increased maneuverability, the four-wheel skid-steer system was selected.
+In order to determine the behavior of drive systems in the competition conditions, research was conducted on drive systems used by various teams from previous years. Many robots encountered wheel slippage and struggled to maneuver out of steep ditches. In order to achieve the goal of autonomy, the team aimed to design the drive system to minimize slippage and maximize maneuverability.
+
+Two potential drive mechanisms were considered: a 4-wheel direct drive and tank tread drive. A trade study for the drive systems considered is shown in Table \ref{table:drive_trade_study}. The tank tread drive is superior to the wheeled drive system in traction and obstacle traversal. However, due to the increased number of parts, it is also less power efficient, heavier, and more difficult to manufacture. The 4-wheel direct drive has very few moving components, making system integration and assembly much simpler. However, few off-the-shelf wheels exist that satisfy the design parameters, necessitating the wheels to be custom-manufactured. While a wheeled drive does not have as much traction as the tank tread drive, independent control for all four wheels allows for advanced control algorithms to monitor and correct wheel slippage. Additionally, the system would be fail-operational in the case a of single drive motor failure. Due to the simpler design implementation and independent control of each wheel, the four wheel direct drive system was selected.
+
+
 
 \FloatBarrier
 	\begin{table}[h]
@@ -55,7 +57,7 @@ Two potential drive mechanisms were considered: a 4-wheel direct drive and tank 
 	\FloatBarrier
 	
 	\subsubsection{Wheels}
-	The wheels were designed to find a compromise between traction, obstacle-traversal ability, weight, and build complexity. The preliminary wheel design can be seen in Figure \ref{fig:cad-wheel-prelim}. The wheels have a 30 cm diameter to be able to climb over smaller obstacles. Based on research into rover wheel design, the team determined that grousers were required to provide traction in the loose BP-1. 12 grousers were chosen to be a good compromise between traction and a smooth ride to vibration and sensor noise. The red spacers are 3D printed to fasten the grousers, wheel sides, and rim together. 6061-T6 aluminum was selected due to its low weight, relatively high strength, and machinability.
+	The wheels were designed to find a compromise between traction, obstacle-traversal ability, weight, and build complexity. The preliminary wheel design can be seen in Figure \ref{fig:cad-wheel-prelim}. The wheels have a 30 cm diameter to be able to climb over smaller obstacles. Based on research into rover wheel design, the team determined that grousers were required to provide traction in the loose BP-1. 12 grousers were chosen to be a good compromise between traction and a smooth ride to reduce vibration and sensor noise. The red spacers are 3D printed to fasten the grousers, wheel sides, and rim together. 6061-T6 aluminum was selected due to its low weight, relatively high strength, and machinability.
 	
 	\FloatBarrier
 		\begin{figure}[h]
@@ -67,11 +69,15 @@ Two potential drive mechanisms were considered: a 4-wheel direct drive and tank 
 		\FloatBarrier
 
 	\subsubsection{Excavation}
-	The driving requirement for the excavation system was to dig through the 30 cm of BP-1 and collect the gravel underneath. The primary design considerations for the digging mechanism were reliability, dust tolerance, complexity, and weight. 
-Research was performed on existing digging mechanisms in the mining industry. Refer to Table \ref{table:dig-trade-study} for a trade study of the designs. The backhoe and bucket wheel excavator were eliminated from the solution space as they are primarily effective for surface mining.  The bucket wheel excavator is capable of removing a large amount of material, but it does not fit within the size constraints of the robot., but its large size would make it hard to fit within the size constraints. 
+The main requirement for the excavation system was to dig through 30 cm of BP-1 and collect the icy regolith simulant underneath. The primary design considerations for the digging mechanism were reliability, dust tolerance, complexity, and weight. 
+Research was performed on existing digging mechanisms in the mining industry. Table \ref{table:dig-trade-study} shows a trade study of potential mining mechanisms. The backhoe and bucket wheel excavator were eliminated from the solution space as they are primarily effective for surface mining. Additionally, the bucket wheel excavator is capable of removing a large amount of material, but does not fit within the size constraints of the robot.
+The chain trencher, which consists of a large chain that draws material out of the ground, is capable of achieving a higher rate of gravel removal than an auger. After consulting with engineers at Ditch Witch, it was determined that a chain trencher of the correct scale for the mining robot would require at least 4 horsepower to drive. The increase in mass and energy usage for the chain trencher does not justify the increased rate of gravel collection.
 
-The chain trencher would be able to excavate significantly more gravel than an auger. However, the power requirements are immense, which is why chain trenchers are always gasoline-powered. After consulting with engineers at Ditch Witch, it was determined that a chain trencher of the correct scale for the RMC would require at least 4 HP to run. This power requirement was not worth the increased gravel collection. 
-The auger was the team’s chosen digging mechanism. It provided a compromise between weight, power consumption, and the mass of gravel collected. The biggest concern was whether the auger would be able to excavate large gravel particles, as augers are generally used for liquids and fine particulate. The team ran experiments to test the auger’s ability to dig through sand and gravel with a tube covering that funnels up gravel. The tube covering was successful in allowing material to be conveyed up the blade. Refer to Appendix A for data from the experiment.
+The auger mechanism provides a compromise between weight, power consumption, and the mass of gravel collected. The rate of gravel collection and power consumption can be scaled by the diameter of the auger, allowing the system to be better designed for the robot. Additionally, fabrication and assembly of the auger system is significantly simpler than that for the chain trencher. Therefore, the auger was selected as the excavation mechanism.
+
+Experiments were conducted to test the effectiveness of elevating sand and gravel through a PVC pipe using an auger. The results from the experiment demonstrated that the auger is capable of excavating gravel. Furthermore, it was found that the auger performed best at an angle of approximately 60 degrees. 
+
+
 
 \FloatBarrier
 	\begin{table}[h]
@@ -103,20 +109,11 @@ The auger was the team’s chosen digging mechanism. It provided a compromise be
 	
 	
 	\subsubsection{Depositing}
-	Excavating the icy regolith with an auger requires additional systems to sort, hold, and deposit the collected material.  Since the auger needs to be on either the front or back end of our robot, placing our depositing system on the opposite side removes the need to rotate the robot after leaving the excavating zone.  This is replaced however, with the new requirement of transporting all collected material from one side of the robot to the other.  Our original, and most abstract design, was a sieve, over a collection bin, which emptied into a conveyor.  This three part system was combined into one conveyor, featuring a volume capacity to hold our predicted maximum of gravel, the ability to quickly deposit into the collector bin, and a plastic mesh as the conveyor belt allows the BP-1 to be sorted without need for an additional mechanism.  This combination of mechanisms allowed for great simplifications and fewer possible points of failure. 
+	Once the icy regolith is collected, it must be stored on the robot until it can be deposited in the collection bin. It was determined that it would be easiest to run the depositing system from the end of the excavation system to the back of the robot. The robot can then be driven in reverse to the collection bin and can avoid the wheel slippage that occurs when making large turns. The excavation system will extract a lot of BP-1, which does not count for points in the competition and increases power consumption due to the added weight. It was decided to use a weaved conveyor belt with a mesh aperture that allows BP-1 to fall to the ground while retaining the icy regolith.
 	
 	
 	\subsubsection{Autonomy}
-	The autonomy module is responsible for localizing the robot and providing control commands to navigate the robot around the field. The following requirements were defined for the system:
-	\begin{itemize}
-	 \item The autonomy module shall be capable of localizing the robot from an unknown starting position
-	 \item The autonomy module shall be able to detect and avoid obstacles such as boulders and ditches
-	 \item The autonomy module shall be capable of navigating the robot back and forth from the starting zone to the mining zone
-	 \item The autonomy module shall communicate with the robot controller with standard control commands
-	 \item The autonomy module shall be able to detect failover to human control in case of an error mode
-	\end{itemize}
-	
-	Multiple sensor options for localization and obstacle avoidance were researched. 2D/3D LIDAR systems, cameras, Microsoft Kinect (Figure \ref{fig:kinect-pic}), telemetry sensors such as encoders, and inertial measurement units were all considered. These sensors were each evaluated based on performance parameters such as update rate, computational complexity, price, and noise.
+	The autonomy module is responsible for localizing the robot and providing control commands to navigate the robot around the field. Multiple sensor options for localization and obstacle avoidance were researched. 2D/3D LIDAR systems, cameras, Microsoft Kinect (Figure \ref{fig:kinect-pic}), telemetry sensors such as encoders, and inertial measurement units were all considered. These sensors were each evaluated based on performance parameters such as update rate, computational complexity, price, and noise.
 	
 	LIDAR based systems were considered due to their widespread use in mapping and localization tasks such as self-driving cars. LIDAR produces high-resolution depth maps of the environment and function  well in environments with limited visibility. However, many 3D LIDAR sensors, which produce a three dimensional scan of the environment, are cost-prohibitive and are not feasible within the team’s budget. While some 2D LIDAR systems fall within the budget,they only produce a planar scan of the environment. Since the obstacles on the field are low to the ground, it would be difficult to find a suitable place to mount the LIDAR system on the robot. 
 	
@@ -127,7 +124,7 @@ The auger was the team’s chosen digging mechanism. It provided a compromise be
 	 \label{fig:kinect-pic}
 	\end{wrapfigure}
 	
-	In order to localize the robot using a camera system, fiducial markers are often placed at a predefined location to serve as a landmark. The robot then determines its pose using a coordinate transformation. The OpenCV library has pre-built functions for determining robot pose by detecting AruCo markers, which are binary square fiducial markers. This method of localization is advantageous because the time required to implement is relatively low compared to other options. However, since the camera is operating in the visual light spectrum, it may be prone to error measurement due to dust kickup. Additionally, ranging with a single camera may not be as accurate because it relies solely on the relative image size instead of time of flight measurements or stereoscopy.
+	In order to localize the robot using a camera system, fiducial markers are often placed at a predefined location to serve as a landmark. The robot then determines its pose using a coordinate transformation. The OpenCV library has pre-built functions for determining robot pose by detecting AruCo markers, which are binary square fiducial markers. This method of localization is advantageous because the time required to implement is low compared to other options. However, since the camera is operating in the visual light spectrum, it may be prone to error measurement due to dust kickup. Additionally, ranging with a single camera may not be as accurate because it relies solely on the relative image size instead of time of flight measurements or stereoscopy.
 	
 	The Microsoft Kinect is a robust, low-cost, 3-dimensional vision system. The Microsoft Kinect outperforms LiDAR systems in dusty conditions due to its use of structured light three dimensional scanning.~\footnote{C. Hall, "Comparing the Performance Of Structured Light Depth Sensors and Traditional Time-of-flight Depth Sensors For Use in a Lunar Mining Environment", Master's, University of Alabama, 2014.} The kinect has an extensive amount of libraries for collecting and utilizing data for depth mapping and feature detection that could be adapted to match the autonomy module requirements. 
 	
